<resources>
    <string name="app_name">AndroidAssignments</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>

    <string name="loginName">login</string>
    <string name="loginHint">login name</string>
    <string name="loginPassword">password</string>
    <string name="loginPasswordHint">password</string>
    <string name="switchText">What does it do?</string>
    <string name="checkbox">Checkbox</string>
    <string name="radiobutton">Radio Button</string>
    <string name="loginButton">login</string>
    <string name="loginError">Missing Password or incorrect Emil format</string>
    <string name="switchON">Switch is on</string>
    <string name="switchOFF">Switch is off</string>
    <string name="dialogBoxMessage">Do you want to exit this activity?</string>
    <string name="dialogBoxTitle">Warning!</string>
    <string name="dialogYes">Ok</string>
    <string name="dialogNo">Cancel</string>
    <string name="dialogNoToast">Nothing happend</string>
    <string name="toastPutExtra">ListItemsActivity shared:</string>
    <string name="myResponse">Here is my response.</string>
    <string name="startChat">Start Chat</string>
    <string name="sendButton">Send</string>

    <string name="sun">Sun</string>
    <string name="campfire">Campfire</string>
    <string name="hearts">Hearts</string>
    <string name="toolbarButton">Toolbar Menu</string>
    <string name="title_activity_copy">Copy</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="snackbar">This is a Snackbar Message</string>
    <string name="menu1snackbar">You selected Item 1</string>
    <string name="about">1.0, by Niklas Aßmann</string>
    <string name="alertDialogToolbar">Do you want to go back?</string>
    <string name="newMessage">Enter new Message</string>
    <string name="messageHint">Message</string>
    <string name="noCharacter">Please enter characters</string>
    <string name="weather">Weather</string>
    <string name="weather_description">The Weather in: </string>
    <string name="delete_message">Delete this message</string>


    <string-array name="canadian_cities">
        <item name="toronto">Toronto</item>
        <item name="vancouver">Vancouver</item>
        <item name="ottawa">Ottawa</item>
        <item name="québec">Québec</item>
        <item name="boston">Boston</item>
        <item name="montreal">Montreal</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>



</resources>