<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/purple_200"
    android:columnCount="2"
    android:rowCount="2">

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:text="@string/radiobutton"/>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:text="@string/checkbox"/>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:minHeight="48dp"
        android:text="@string/switchText"
        android:layout_columnWeight="1"
        android:gravity="fill" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/ButtonText"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@android:drawable/ic_menu_camera"
        android:layout_columnWeight="1"
        android:gravity="fill"/>


</GridLayout>